--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	<script src="./js/tabs.js" defer></script>
 	<script src="./js/modal.js" defer></script>
 	<script src="./js/menu.js" defer></script>
-	<script src="./js//accordeon.js" defer></script>
+	<script src="./js/accordeon.js" defer></script>
+	<script src="./js/timer.js" defer></script>
+	<script src="./js/scroll.js" defer></script>
 </head>
 
 <body>
@@ -344,6 +346,8 @@
 		</div>
 	</div>
 	<!-- modal (end) -->
+	<!-- js -->
+	<script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
 </body>
 
 </html>
